[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/sfx/Jump_01.wav" type="AudioStream" id=1]
[ext_resource path="res://src/entities/enemies/EnemyBall/EnemyBall.gd" type="Script" id=2]
[ext_resource path="res://src/entities/enemies/EnemyBall/states/ChaseBall.gd" type="Script" id=3]
[ext_resource path="res://src/scripts/AnimationMachine.gd" type="Script" id=5]
[ext_resource path="res://src/scripts/StatesMachine.gd" type="Script" id=6]
[ext_resource path="res://src/entities/enemies/GeneralStates/Death.gd" type="Script" id=7]
[ext_resource path="res://assets/entities/enemies/ball/new dasher remaster-Sheet.png" type="Texture" id=8]
[ext_resource path="res://src/entities/enemies/EnemyBall/states/AttackBall.gd" type="Script" id=9]
[ext_resource path="res://src/UI/healthBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/entities/shadow.png" type="Texture" id=11]
[ext_resource path="res://assets/sfx/Explosion_02.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/Hit_02.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 1.6
tracks/0/type = "method"
tracks/0/path = NodePath("../StateMachine/Attack")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_dash"
}, {
"args": [  ],
"method": "end_dash"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Dash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Dash:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 30, 31, 32, 33, 40, 41, 42, 43, 44, 45 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hurtbox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, -36 ), Vector2( -1.5, -38 ), Vector2( -1.5, -38 ), Vector2( 0, -36 ), Vector2( 0, -48 ), Vector2( 0, -48 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Hurtbox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38.5, 48 ), Vector2( 38.5, 36 ), Vector2( 38.5, 39 ), Vector2( 38.5, 39 ), Vector2( 38.5, 36 ), Vector2( 38.5, 48 ), Vector2( 38.5, 48 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.8
tracks/0/type = "audio"
tracks/0/path = NodePath("../Death")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Death:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../StateMachine/Death")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "delete_enemy"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55, 56, 57 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Death:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Dash:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hurtbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hurtbox/CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 38.5, 48 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Hurtbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ), Vector2( 0, -80 ), Vector2( 0, -80 ), Vector2( 0, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.25 ), Vector2( 1, 1.25 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, false ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../Hit")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hit:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../StateMachine/Attack")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "call_hit"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="VisualShaderNodeColorConstant" id=9]

[sub_resource type="VisualShaderNodeTexture" id=10]
source = 2

[sub_resource type="VisualShaderNodeVectorOp" id=11]
operator = 6

[sub_resource type="VisualShaderNodeVectorOp" id=12]
operator = 2

[sub_resource type="VisualShaderNodeBooleanUniform" id=13]
uniform_name = "active"

[sub_resource type="VisualShader" id=14]
code = "shader_type canvas_item;
uniform bool active;



void vertex() {
// Output:0

}

void fragment() {
// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out3p0 = _tex_read.rgb;
		n_out3p1 = _tex_read.a;
	}

// BooleanUniform:9
	bool n_out9p0 = active;

// Color:11
	vec3 n_out11p0 = vec3(1.000000, 1.000000, 1.000000);
	float n_out11p1 = 1.000000;

// VectorOp:6
	vec3 n_out6p0 = vec3(n_out9p0 ? 1.0 : 0.0) * n_out11p0;

// VectorOp:5
	vec3 n_out5p0 = max(n_out3p0, n_out6p0);

// Output:0
	COLOR.rgb = n_out5p0;
	COLOR.a = n_out3p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 380.259, -42.7217 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1040, 60 )
nodes/fragment/3/node = SubResource( 10 )
nodes/fragment/3/position = Vector2( 600, -40 )
nodes/fragment/5/node = SubResource( 11 )
nodes/fragment/5/position = Vector2( 860, -60 )
nodes/fragment/6/node = SubResource( 12 )
nodes/fragment/6/position = Vector2( 600, 100 )
nodes/fragment/9/node = SubResource( 13 )
nodes/fragment/9/position = Vector2( 400, 0 )
nodes/fragment/11/node = SubResource( 9 )
nodes/fragment/11/position = Vector2( 400, 120 )
nodes/fragment/connections = PoolIntArray( 3, 1, 0, 1, 3, 0, 5, 0, 6, 0, 5, 1, 5, 0, 0, 0, 9, 0, 6, 0, 11, 0, 6, 1 )

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = SubResource( 14 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=16]
radius = 16.0
height = 0.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 38.5, 48 )

[sub_resource type="CircleShape2D" id=21]

[sub_resource type="CapsuleShape2D" id=18]
radius = 192.0
height = 0.0

[node name="EnemyBall" type="KinematicBody2D" groups=["ENTITY", "enemy"]]
collision_layer = 5
collision_mask = 73
script = ExtResource( 2 )
entity_name = "BALL"
entity_type = "ENEMY"
max_speed = 1200.0
max_health = 250.0
damage_value = 30.0
knockback_value = 50.0

[node name="AnimationMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Animations" type="AnimationPlayer" parent="AnimationMachine"]
root_node = NodePath("../../Sprite")
anims/Attack = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Run = SubResource( 5 )

[node name="Hit" type="AnimationPlayer" parent="AnimationMachine"]
anims/Hit = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("Chase")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
cooldown_duration = 3.0
dash_duration = 0.8
dash_speed = 1250

[node name="DashDurationTimer" type="Timer" parent="StateMachine/Attack"]
wait_time = 0.215
one_shot = true

[node name="Cooldown" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 4.8, 0 )
scale = Vector2( 1.6, 1 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 15 )
position = Vector2( 0, -64 )
texture = ExtResource( 8 )
hframes = 10
vframes = 6

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -16 )
shape = SubResource( 16 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -48 )
shape = SubResource( 8 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( -1, -39 )
scale = Vector2( 3.72, 3.72 )
collision_layer = 16
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 21 )
disabled = true

[node name="EngageRange" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -48 )
rotation = -1.5708
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EngageRange"]
position = Vector2( -24, -8.58307e-05 )
rotation = -3.14159
shape = SubResource( 18 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 10 )]
margin_top = -128.0
margin_bottom = -96.0
